--- a/landing.html
+++ b/landing.html
@@ -11,41 +11,41 @@
 </head>
 <body>
   <div id="main">
-    <div class="top">
-        <div class="overlay">
-            <div class="text">
-                <h1>Images</h1>
-                <div class="image"></div>
-                <div class="rtext">
-                    <p>Mesmerizing</p>
-                    <p>Astonishing</p>
-                </div>
-                <div class="icon">
-                    <i class="ri-twitter-fill"></i>
-                    <i class="ri-instagram-fill"></i>
-                    <i class="ri-facebook-fill"></i>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="bottom">
-        <div class="b1">
+  <div class="top">
+  <div class="overlay">
+  <div class="text">
+  <h1>Images</h1>
+  <div class="image"></div>
+  <div class="rtext">
+      <p>Mesmerizing</p>
+      <p>Astonishing</p>
+  </div>
+  <div class="icon">
+      <i class="ri-twitter-fill"></i>
+      <i class="ri-instagram-fill"></i>
+      <i class="ri-facebook-fill"></i>
+   </div>
+   </div>
+   </div>
+   </div>
+   <div class="bottom">
+   <div class="b1">
             <h1>Popular</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        </div>
-        <div class="b2">
-            <div class="up">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At eaque cupiditate reiciendis necessitatibus cum illo amet, assumenda fugit repellat facilis autem temporibus, eligendi suscipit est beatae et modi sint veritatis.</p>
+    </div>
+    <div class="b2">
+    <div class="up">
                 <h1>Latest</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.Impedit, eos corporis!</p>
-     </div>
-            <div class="down">
-                <div class="overlay">
-                    <h1>More..</h1>
-
-                </div>
-        </div>
-     </div>
-        <div class="b3">        
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto itaque consectetur a et, sit, soluta cumque, ipsam est eveniet necessitatibus sint neque hic vero corrupti labore dolor? Consequatur, laudantium sit.
+                </p>
+    </div>
+    <div class="down">
+    <div class="overlay">
+    <center><h1>More..</h1></center>
+    </div>
+    </div>
+    </div>
+    <div class="b3">        
             <div class="overlay">
             <p>Privacy Policies</p>
             <p>Terms and Conditions</p>
@@ -53,9 +53,9 @@
             <p>About Us</p>
 </div>
         
-        </div>
-      </div>
-    </div>
-  </div>  
+</div>
+</div>
+</div>
+</div>  
 </body>
 </html>
